=====================================================================
	Change Log
	phpGedView

	This and other information can be found online at
	http://www.phpgedview.net

	# $Id$
=====================================================================


Version 4.2.3
 - Update: PCLzip 2.8.2 (volschin)
 - Update: TCPDF 4.8.016 (volschin)
 - Fixed: [ 1738619 ] Deleting Gedcom file - Misc Entried Remain in DB (fisharebest)
 - Fixed: [ 2881117 ] 4.2.2 Merge 2 Indis makes 2 clones in Fam record (fisharebest)
 - Fixed: [ 2840835 ] Checker reports warning if CONT tag value is all spaces (fisharebest)
 - Fixed: [ 2900966 ] batch update for death records (fisharebest)
 - Fixed: [ 2898717 ] No AGE field in LDS GUIs (fisharebest)
 - Fixed: Extended javascript change for dates like 21.12.1880 also with a prefix like AFT (volschin)
 - Fixed: Wrong uppercase javascript change for date phrases in brackets (volschin)
 - Fixed: [ 2895822 ] SVN 6380 Fatal error class_stats.php (fisharebest)
 - Fixed: [ 2891461 ] Fault in the Quick add form (wooc)
 - Fixed: [ 1771095 ] Place Check - Index Directory (fisharebest)
 - Update: is_dead() calculations now take account of non-gregorian dates
 - Fixed: [ 1941711 ] Age at which to assume a person is dead Off By 1 Year (fisharebest)
 - Fixed: [ 2033046 ] Misleading text for changes_present (fisharebest)
 - Fixed: [ 1782849 ] Minimal Theme - No text shown - Research Assistant top menu (fisharebest)
 - Fixed: [ 1390658 ] Ever Increasing URLs (e.g. login link) (fisharebest)
 - Fixed: [ 1922109 ] Limited entries in "Most Common Surnames" statistic (fisharebest)
 - Fixed: [ 2781212 ] Descendancy Chart - NCHI (fisharebest)
 - Fixed: [ 2890112 ] Shared Notes list doesn't display titles (4.2.3 svn) (fisharebest)
 - Fixed: [ 2891075 ] MINOR name display anomaly (fisharebest)
 - Fixed: [ 2891924 ] Another HTML rendering bug (fisharebest)
 - Fixed: [ 2891960 ] Date/age/death issue (fisharebest)
 - Fixed: [ 2890679 ] Sorting sources (fisharebest)